# rag-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.spaces  LICENSE  README.md  api.py  app.py  docker-compose.yml  gradio_app.py  pyproject.toml  rate_limits.py  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  refresh-tor-exits.yml
data/: example.md  sample_docs.txt
evals/: dataset.json  evaluate.py
tests/: test_smoke.py
